2000-07-31  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-db.el (mhc-db/eval-for-duration): Call `sexp' only if
	it is non-nil.
	(mhc-db-add-record-from-buffer): Display error if slot is nil.

	* emacs/mhc-logic.el (mhc-logic-eval-for-date): Ditto.

	* emacs/mhc-mime.el (mhc-mime-get-import-buffer):
	Bind buffer-read-only as nil while highlighting.

2000-07-28  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-logic.el (mhc-logic/day-of-month-regexp):
	In X-SC-Cond, day of month allows preceding zeros.

2000-07-28  Yoshiaki Kasahara  <kasahara@nc.kyushu-u.ac.jp>

	* emacs/mhc-date.el (mhc-date-digit-to-oo-string): Fix a typo.

	* emacs/mhc-logic.el (mhc-logic-day-as-string-list):
	remove a space after '!'.

2000-07-28  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-db.el (mhc-db-add-exception-rule):
	delete white space between `!' and a digit.
	(Patch is from Hideyuki SHIRAI  <shirai@quickhack.net>)

	* ruby-ext/lib/mhc-schedule.rb (parse_xsc_headers):
	Allow white spaces after `!' in a Day: field.

2000-07-28  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (toplevel): Require 'mhc-draft.
	Removed draft related functions (Moved to mhc-draft.el).
	(mhc-edit): Changed for new draft.
	Delete candidate overlay if it exists in the draft buffer.
	(mhc-modify-file): Ditto.

	* emacs/mhc-summary.el (mhc-summary-get-function): New defsubst.
	(mhc-get-function): Ditto.
	(mhc-eword-decode-string): Ditto.

	* emacs/mhc-schedule.el (mhc-schedule-subject):
	Call `mhc-eword-decode-string'.
	(mhc-schedule-location): Ditto.

	* emacs/mhc-record.el (toplevel): Require 'mhc-draft.
	(mhc-record-write-buffer): Call `mhc-draft-translate'.

	* emacs/mhc-mew.el (mhc-mew-draft-setup-new): New function.
	(mhc-mew-draft-reedit-buffer): Ditto.
	(mhc-mew-draft-reedit-file): Ditto.
	(mhc-mew-draft-translate): New alias.
	(mhc-mew-eword-decode-string): Ditto.
	(toplevel): Record new backend functions.

	* emacs/mhc-gnus.el (toplevel): require 'mhc-mime.